--- a/API1/package.json
+++ b/API1/package.json
@@ -10,7 +10,8 @@
   "license": "ISC",
   "dependencies": {
     "chai": "^4.3.7",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "tracer": "^1.1.6"
   },
   "devDependencies": {
     "chai-http": "^4.3.0",
