Updated main.yml file

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,15 +11,15 @@ jobs:
     env:
       MYSQL_ROOT_PASSWORD: root # default root password to use must be 'root'
       DB_HOST: "db-mysql-ams3-46626-do-user-8155278-0.b.db.ondigitalocean.com"
-      DB_PORT: 25060
-      DB_DATABASE: "2176550"
-      DB_USER: "2176550"
-      DB_PASSWORD: "secret"
+      DB_PORT: "25060"
+      DB_DATABASE: 2176550
+      DB_USER: 2176550
+      DB_PASSWORD: secret
     services:
       mysql:
         image: mysql:5.7
         ports:
-          - 25060
+          - "25060"
     steps:
       - uses: actions/checkout@main
 
