--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,20 +6,25 @@ on:
       - main
 
 jobs:
-  build:
-    runs-on: ubuntu-latest
-    env:
-      MYSQL_ROOT_PASSWORD: root
-      MYSQL_HOST: 127.0.0.1
-      MYSQL_PORT: 3306
-      MYSQL_DATABASE: shareameal
-      MYSQL_USER: root
-      MYSQL_PASSWORD: root
-    services:
-      mysql:
-        image: mysql:5.7
-        ports:
-          - 3306
+build:
+  runs-on: ubuntu-latest
+  env:
+    MYSQL_ROOT_PASSWORD: root
+    DB_HOST: db-mysql-ams3-46626-do-user-8155278-0.b.db.ondigitalocean.com
+    DB_USER: 2176550
+    DB_PASSWORD: secret
+    DB_NAME: 2176550
+    DB_PORT: 25060
+    waitForConnections: true
+    connectionLimit: 10
+    maxIdle: 10
+    idleTimeout: 60000
+    queueLimit: 0
+  services:
+    mysql:
+      image: mysql:5.7
+      ports:
+        - 25060
     steps:
       - uses: actions/checkout@v3
       - name: Use Node.js 18
