Turned off main script

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,65 +1,65 @@
-name: Testing and deployment
+# name: Testing and deployment
 
-on:
-  push:
-    branches:
-      - main
+# on:
+#   push:
+#     branches:
+#       - main
 
-jobs:
-  build:
-    runs-on: ubuntu-latest
-    env:
-      MYSQL_ROOT_PASSWORD: root
-      DB_HOST: db-mysql-ams3-46626-do-user-8155278-0.b.db.ondigitalocean.com
-      DB_USER: 2176550
-      DB_PASSWORD: secret
-      DB_NAME: 2176550
-      DB_PORT: 25060
-      waitForConnections: true
-      connectionLimit: 10
-      maxIdle: 10
-      idleTimeout: 60000
-      queueLimit: 0
-    services:
-      mysql:
-        image: mysql:5.7
-        ports:
-          - 25060
-    steps:
-      - uses: actions/checkout@v3
-      - name: Use Node.js 18
-        uses: actions/setup-node@v3
-        with:
-          node-version: 18
-      - name: Start MySQL connection from host
-        run: |
-          sudo /etc/init.d/mysql start
-          sudo apt-get install -y mysql-client
-          mysql -uroot -p${{ env.MYSQL_ROOT_PASSWORD }} -e "SHOW DATABASES;"
-          mysql -uroot -p${{ env.MYSQL_ROOT_PASSWORD }} -e "CREATE DATABASE ${{env.MYSQL_DATABASE}};"
-      - name: Import database script
-        run: |
-          mysql -uroot -p${{env.MYSQL_ROOT_PASSWORD}} ${{env.MYSQL_DATABASE}} < share-a-meal.sql
-          mysql -uroot -p${{env.MYSQL_ROOT_PASSWORD}} ${{env.MYSQL_DATABASE}} -e "SHOW TABLES;"
-          mysql -uroot -p${{env.MYSQL_ROOT_PASSWORD}} ${{env.MYSQL_DATABASE}} -e "SHOW VARIABLES;"
-      - run: npm ci
-      - run: npm test
+# jobs:
+#   build:
+#     runs-on: ubuntu-latest
+#     env:
+#       MYSQL_ROOT_PASSWORD: root
+#       DB_HOST: db-mysql-ams3-46626-do-user-8155278-0.b.db.ondigitalocean.com
+#       DB_USER: 2176550
+#       DB_PASSWORD: secret
+#       DB_NAME: 2176550
+#       DB_PORT: 25060
+#       waitForConnections: true
+#       connectionLimit: 10
+#       maxIdle: 10
+#       idleTimeout: 60000
+#       queueLimit: 0
+#     services:
+#       mysql:
+#         image: mysql:5.7
+#         ports:
+#           - 25060
+#     steps:
+#       - uses: actions/checkout@v3
+#       - name: Use Node.js 18
+#         uses: actions/setup-node@v3
+#         with:
+#           node-version: 18
+#       - name: Start MySQL connection from host
+#         run: |
+#           sudo /etc/init.d/mysql start
+#           sudo apt-get install -y mysql-client
+#           mysql -uroot -p${{ env.MYSQL_ROOT_PASSWORD }} -e "SHOW DATABASES;"
+#           mysql -uroot -p${{ env.MYSQL_ROOT_PASSWORD }} -e "CREATE DATABASE ${{env.MYSQL_DATABASE}};"
+#       - name: Import database script
+#         run: |
+#           mysql -uroot -p${{env.MYSQL_ROOT_PASSWORD}} ${{env.MYSQL_DATABASE}} < share-a-meal.sql
+#           mysql -uroot -p${{env.MYSQL_ROOT_PASSWORD}} ${{env.MYSQL_DATABASE}} -e "SHOW TABLES;"
+#           mysql -uroot -p${{env.MYSQL_ROOT_PASSWORD}} ${{env.MYSQL_DATABASE}} -e "SHOW VARIABLES;"
+#       - run: npm ci
+#       - run: npm test
 
-  Railway-deploy:
-    runs-on: ubuntu-latest
-    environment:
-      name: Railway
-    steps:
-      - name: Clone repository
-        uses: actions/checkout@v3
+#   Railway-deploy:
+#     runs-on: ubuntu-latest
+#     environment:
+#       name: Railway
+#     steps:
+#       - name: Clone repository
+#         uses: actions/checkout@v3
 
-      - name: "Current token"
-        run: |
-          echo "secrets.RAILWAY_TOKEN: ${{ secrets.RAILWAY_TOKEN }}"
-      - name: Install Railway
-        run: npm i -g @railway/cli
+#       - name: "Current token"
+#         run: |
+#           echo "secrets.RAILWAY_TOKEN: ${{ secrets.RAILWAY_TOKEN }}"
+#       - name: Install Railway
+#         run: npm i -g @railway/cli
 
-      - name: Deploy server to Railway
-        run: railway up
-        env:
-          RAILWAY_TOKEN: ${{ secrets.RAILWAY_TOKEN }}
+#       - name: Deploy server to Railway
+#         run: railway up
+#         env:
+#           RAILWAY_TOKEN: ${{ secrets.RAILWAY_TOKEN }}
