--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,7 +12,7 @@ jobs:
       MYSQL_ROOT_PASSWORD: root
       MYSQL_HOST: 127.0.0.1
       MYSQL_PORT: 3306
-      MYSQL_DATABASE: share-a-meal-db
+      MYSQL_DATABASE: "share-a-meal-db"
       MYSQL_USER: root
       MYSQL_PASSWORD: root
     services:
